--- a/_posts/2022-05-21-test-blog.md
+++ b/_posts/2022-05-21-test-blog.md
@@ -1,8 +1,8 @@
 ---
 title: "Test Blog"
-excerpt_separator: <!--more-->
+post_description: "Euan is a Computer Science Msci student at the University of Nottingham, based in both Nottingham and Reading (UK), who has a passion for software development and new developing technologies. This website is used to show his development and experiences as he moves from the world of education to work. He has self-taught himself programming since 2016 and continued to develop further on this in his education since."
 ---
 <p class="grid-100 mobile-grid-100" style="font-size: 16px;">Euan is a Computer Science Msci student at the University of Nottingham, based in both Nottingham and Reading (UK), who has a passion for software development and new developing technologies. This website is used to show his development and experiences as he moves from the world of education to work. He has self-taught himself programming since 2016 and continued to develop further on this in his education since.</p>
-<!--more-->
+
 <h3 class="grid-100 mobile-grid-100 content-heading" >About</h3>
 <p class="grid-100 mobile-grid-100" style="font-size: 16px;margin-bottom: 40px;">A Test</p>
